--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Plotly chart will be drawn inside this DIV -->
   <div id="myDiv"></div>
     <script>
-    Plotly.d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/finance-charts-apple.csv", function(err, rows){
+    Plotly.d3.csv("https://raw.githubusercontent.com/nailtosun/Repo_for_powerlab/master/data_date.csv", function(err, rows){
 
   function unpack(rows, key) {
   return rows.map(function(row) { return row[key]; });
@@ -18,31 +18,20 @@
 var trace1 = {
   type: "scatter",
   mode: "lines",
-  x: unpack(rows, 'Date'),
-  y: unpack(rows, 'AAPL.High'),
+  x: unpack(rows, 'index'),
+  y: unpack(rows, 'Pmax'),
   line: {color: '#17BECF'}
 }
 
-var trace2 = {
-  type: "scatter",
-  mode: "lines",
-  x: unpack(rows, 'Date'),
-  y: unpack(rows, 'AAPL.Low'),
-  line: {color: '#7F7F7F'}
-}
 
-var data = [trace1,trace2];
+var data = [trace1];
 
 var layout = {
-  title: 'Custom Range',
+  title: 'Ayasli GES electricity production over time',
   xaxis: {
-    range: ['2016-07-01', '2016-12-31'],
-    type: 'date'
+
   },
   yaxis: {
-    autorange: true,
-    range: [86.8700008333, 138.870004167],
-    type: 'linear'
   }
 };
 
